# AMboard

./: .clang-format  CMakeLists.txt  graph.yaml  main.cpp  vcpkg.json
AMboard/: CMakeLists.txt
AMboard/Control/: CMakeLists.txt  EventHooker.cxx  InputDispatcher.cxx  InputDispatcher.hxx  InputService.cxx  InputService.hxx
AMboard/CustomNodes/: BranchingNode.cxx  CMakeLists.txt  CommonNode.cxx  CustomNodeManager.cxx  CustomNodeManager.hxx  WindowUtil.cxx  WindowUtil.hxx
AMboard/CustomNodes/CV/: CMakeLists.txt  ScreenPattern.cxx
AMboard/Editor/: BoardEditor.cxx  BoardEditor.hxx  CMakeLists.txt  GridPipline.cxx  GridPipline.hxx  NodeContextMenu.cxx  NodeContextMenu.hxx  NodePipline.cxx  NodePipline.hxx  Utils.hxx
AMboard/Editor/NodeRender/: CMakeLists.txt  NodeBackgroundPipline.cxx  NodeBackgroundPipline.hxx  NodeConnectionPipline.cxx  NodeConnectionPipline.hxx  NodePinPipline.cxx  NodePinPipline.hxx  NodeRenderer.cxx  NodeRenderer.hxx  NodeTextPerGroupMeta.hxx  NodeTextRenderPipline.cxx  NodeTextRenderPipline.hxx  NodeTextType.hxx
AMboard/Macro/: BaseNode.cxx  BaseNode.hxx  CMakeLists.txt  DataPin.cxx  DataPin.hxx  ExecuteNode.cxx  ExecuteNode.hxx  ExecutionManager.cxx  ExecutionManager.hxx  FlowPin.cxx  FlowPin.hxx  MacroDefines.hxx  Pin.cxx  Pin.hxx
AMboard/Macro/Ext/: FileDrop.hxx  ImGuiPopup.hxx  NodeInnerText.hxx
Control/: EventHooker.hxx
Interface/: CMakeLists.txt  InputManager.cxx  InputManager.hxx  Interface.hxx  WindowBase.cxx  WindowBase.hxx  WindowResizeReactor.cxx  WindowResizeReactor.hxx
Interface/API/: CMakeLists.txt  WebGPUAPI.cxx  WebGPUAPI.hxx
Interface/Buffer/: CMakeLists.txt  DynamicGPUBuffer.cxx  DynamicGPUBuffer.hxx  DynamicVertexBuffer.cxx  DynamicVertexBuffer.hxx
Interface/Font/: CMakeLists.txt  Font.cxx  Font.hxx  TextRenderSystem.cxx  TextRenderSystem.hxx  TextRenderSystemHandle.hxx
Interface/Pipline/: CMakeLists.txt  DepthTexture.cxx  DepthTexture.hxx  RenderPipeline.cxx  RenderPipeline.hxx  TextPipline.cxx  TextPipline.hxx  TextRenderMeta.hxx
Macro/: BaseNode.cxx  BaseNode.hxx  CMakeLists.txt  ExecuteNode.cxx  ExecuteNode.hxx  FlowPin.cxx  FlowPin.hxx  Pin.cxx  Pin.hxx
Util/: Assertions.hxx  CMakeLists.txt  RangeManager.cxx  RangeManager.hxx
cmake/: library.cmake
